--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-slideshow-image": "^3.4.3",
     "reactstrap": "^8.8.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
